--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -54,6 +54,7 @@
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:layout_margin="12dp"
+        android:entries="@array/Avaliacao"
 
         />
     <Button
